# pybind11_minimal

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
src/: multiply.cpp  multiply.h  run_sspy.cpp  string_example.cpp  string_example.h  test  test.cpp
src/custom_class/include/: my_class.h
src/custom_class/src/: my_class.cpp
src/sspy/: __init__.py
